<resources>
    <string name="app_name">FinalProject Group11</string>

    <string name="monday">一</string>
    <string name="tuesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="sunday">日</string>

    <string name="mondayTag">MON</string>
    <string name="tuesdayTag">TUE</string>
    <string name="wednesdayTag">WED</string>
    <string name="thursdayTag">THU</string>
    <string name="fridayTag">FRI</string>
    <string name="saturdayTag">SAT</string>
    <string name="sundayTag">SUN</string>
</resources>